fix: bg.jpg position left on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -382,7 +382,7 @@
     background-position: 70% 60%;
   }
   .slide-bg1 {
-    background-position: 40% 70%;
+    background-position: left 70%;
   }
   .slide-bg3 {
     background-position: 70% 60%;
